[gd_scene load_steps=19 format=3 uid="uid://b5jul8tjuxj30"]

[ext_resource type="Script" path="res://scripts/raptor_avatar.gd" id="1_goopk"]
[ext_resource type="PackedScene" uid="uid://locdh3npnl70" path="res://assets/spriteBasedObjects/cylinder_sbo.tscn" id="2_mto0i"]

[sub_resource type="BoxMesh" id="BoxMesh_8s13j"]
size = Vector3(0.675, 0.74, 1.26)

[sub_resource type="BoxMesh" id="BoxMesh_yu770"]
size = Vector3(0.52, 0.615, 0.75)

[sub_resource type="BoxMesh" id="BoxMesh_g8ve4"]
size = Vector3(0.545, 0.58, 0.795)

[sub_resource type="BoxMesh" id="BoxMesh_lcelx"]
size = Vector3(0.575, 0.54, 0.775)

[sub_resource type="BoxMesh" id="BoxMesh_jfdql"]
size = Vector3(0.515, 0.48, 0.775)

[sub_resource type="BoxMesh" id="BoxMesh_w7jnl"]
size = Vector3(0.42, 0.435, 0.775)

[sub_resource type="BoxMesh" id="BoxMesh_iqysv"]
size = Vector3(0.33, 0.36, 0.775)

[sub_resource type="BoxMesh" id="BoxMesh_veudf"]
size = Vector3(0.285, 0.285, 0.775)

[sub_resource type="BoxMesh" id="BoxMesh_85tav"]
size = Vector3(0.205, 0.23, 0.775)

[sub_resource type="BoxMesh" id="BoxMesh_edeyf"]
size = Vector3(0.155, 0.19, 0.775)

[sub_resource type="BoxMesh" id="BoxMesh_xgwaa"]
size = Vector3(0.37, 1.24, 0.55)

[sub_resource type="BoxMesh" id="BoxMesh_sq1hq"]
size = Vector3(0.28, 0.91, 0.335)

[sub_resource type="BoxMesh" id="BoxMesh_3o6jb"]
size = Vector3(0.28, 1, 0.335)

[sub_resource type="BoxMesh" id="BoxMesh_6jeno"]
size = Vector3(0.255, 0.97, 0.44)

[sub_resource type="BoxMesh" id="BoxMesh_7mygg"]
size = Vector3(0.215, 0.865, 0.36)

[sub_resource type="BoxMesh" id="BoxMesh_ebl5n"]
size = Vector3(0.25, 0.595, 0.235)

[node name="raptorAvatar" type="Node3D"]
script = ExtResource("1_goopk")
animated = false

[node name="graphics" type="Node3D" parent="."]

[node name="root" type="Node3D" parent="graphics"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.0911143, -0.0171669)

[node name="body" type="Node3D" parent="graphics/root"]
transform = Transform3D(0.99853, 0.00191191, 0.0541573, 0, 0.999377, -0.035281, -0.054191, 0.0352291, 0.997909, 0, 1.38362, 0)

[node name="MeshInstance3D" type="MeshInstance3D" parent="graphics/root/body"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.135695)
mesh = SubResource("BoxMesh_8s13j")

[node name="CylinderSBO" parent="graphics/root/body" instance=ExtResource("2_mto0i")]
transform = Transform3D(5.30881, -0.075605, -0.082958, 0.0829664, 2.46897e-06, 5.30935, -0.0755958, -5.30946, 0.00118376, -0.00463485, 0.0144519, -0.309621)
visible = false

[node name="neck1" type="Node3D" parent="graphics/root/body"]
transform = Transform3D(0.999632, 0.0134127, -0.0235543, 0, 0.868987, 0.494834, 0.0271054, -0.494652, 0.868668, 8.44011e-10, 0, 0.305)

[node name="MeshInstance3D" type="MeshInstance3D" parent="graphics/root/body/neck1"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.363545)
mesh = SubResource("BoxMesh_yu770")

[node name="head" type="Node3D" parent="graphics/root/body/neck1"]
transform = Transform3D(0.999633, -0.0125733, -0.0240128, 0, 0.885904, -0.463867, 0.0271055, 0.463697, 0.885579, 0, 0, 0.785)

[node name="MeshInstance3D" type="MeshInstance3D" parent="graphics/root/body/neck1/head"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.297723)
mesh = SubResource("BoxMesh_g8ve4")

[node name="spine1" type="Node3D" parent="graphics/root/body"]
transform = Transform3D(0.998529, 0.00382144, -0.0540561, -8.59631e-11, 0.997509, 0.070518, 0.0541909, -0.0704143, 0.996045, -8.73115e-11, 0.112, -0.757947)

[node name="MeshInstance3D" type="MeshInstance3D" parent="graphics/root/body/spine1"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.0602217, -0.383047)
mesh = SubResource("BoxMesh_lcelx")

[node name="CylinderSBO2" parent="graphics/root/body/spine1" instance=ExtResource("2_mto0i")]
transform = Transform3D(5.39426, -0.248842, 0.00242945, 0.000467046, -0.0425943, -5.39983, 0.248853, 5.3941, -0.0425275, 0, 0, -0.5)
visible = false

[node name="spine2" type="Node3D" parent="graphics/root/body/spine1"]
transform = Transform3D(0.997314, -0.00333587, -0.0731733, 0, 0.99896, -0.0455413, 0.0732494, 0.0454189, 0.996278, 0, -0.131242, -0.771777)

[node name="CylinderSBO" parent="graphics/root/body/spine1/spine2" instance=ExtResource("2_mto0i")]
transform = Transform3D(4.73972, 0.0519707, -2.27171e-09, 0, -2.07192e-07, -4.74, -0.0519707, 4.73972, -2.0718e-07, 3.72529e-09, 0.0699999, -0.375)
visible = false

[node name="MeshInstance3D" type="MeshInstance3D" parent="graphics/root/body/spine1/spine2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0678689, -0.383047)
mesh = SubResource("BoxMesh_jfdql")

[node name="spine3" type="Node3D" parent="graphics/root/body/spine1/spine2"]
transform = Transform3D(0.997314, -0.00248539, -0.0732071, 0, 0.999424, -0.0339306, 0.0732494, 0.0338394, 0.996739, 0, 0.0455294, -0.768348)

[node name="CylinderSBO" parent="graphics/root/body/spine1/spine2/spine3" instance=ExtResource("2_mto0i")]
transform = Transform3D(3.78435, -0.356092, 0.379884, 0.381549, 4.26471e-05, -3.8009, 0.354307, 3.80337, 0.0356095, 1.49012e-08, 0, -0.375)
visible = false

[node name="MeshInstance3D" type="MeshInstance3D" parent="graphics/root/body/spine1/spine2/spine3"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0225947, -0.383047)
mesh = SubResource("BoxMesh_w7jnl")

[node name="spine4" type="Node3D" parent="graphics/root/body/spine1/spine2/spine3"]
transform = Transform3D(0.999172, -0.00068939, -0.0406462, 0, 0.999855, -0.0169584, 0.0406519, 0.0169443, 0.99903, 0, 0, -0.765967)

[node name="CylinderSBO" parent="graphics/root/body/spine1/spine2/spine3/spine4" instance=ExtResource("2_mto0i")]
transform = Transform3D(2.94713, -0.345841, -0.367284, 0.369772, 4.84721e-05, 2.96705, -0.34318, -2.96993, 0.0428177, 2.98023e-08, 3.57628e-07, -0.335001)
visible = false

[node name="MeshInstance3D" type="MeshInstance3D" parent="graphics/root/body/spine1/spine2/spine3/spine4"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0225947, -0.383047)
mesh = SubResource("BoxMesh_iqysv")

[node name="spine5" type="Node3D" parent="graphics/root/body/spine1/spine2/spine3/spine4"]
transform = Transform3D(0.999875, -4.68846e-05, 0.0158078, 0, 0.999996, 0.00296588, -0.0158079, -0.00296552, 0.999869, 0, 0, -0.759083)

[node name="MeshInstance3D" type="MeshInstance3D" parent="graphics/root/body/spine1/spine2/spine3/spine4/spine5"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0225947, -0.383047)
mesh = SubResource("BoxMesh_veudf")

[node name="CylinderSBO2" parent="graphics/root/body/spine1/spine2/spine3/spine4/spine5" instance=ExtResource("2_mto0i")]
transform = Transform3D(2.41084, -0.163647, -0.300452, 0.308502, 0.115335, 2.41262, -0.147912, -2.42676, 0.134924, 0.00332704, 0.0200396, -0.180764)
visible = false

[node name="CylinderSBO3" parent="graphics/root/body/spine1/spine2/spine3/spine4/spine5" instance=ExtResource("2_mto0i")]
transform = Transform3D(2.43, 0, 0, 0, -1.06219e-07, -2.43, 0, 2.43, -1.06219e-07, -0.0145654, 0.00458729, -0.529275)
visible = false

[node name="spine6" type="Node3D" parent="graphics/root/body/spine1/spine2/spine3/spine4/spine5"]
transform = Transform3D(0.996899, -0.00215652, 0.0786637, 0, 0.999623, 0.027404, -0.0786934, -0.0273191, 0.996523, 0, 0, -0.761252)

[node name="CylinderSBO5" parent="graphics/root/body/spine1/spine2/spine3/spine4/spine5/spine6" instance=ExtResource("2_mto0i")]
transform = Transform3D(2.385, -6.86086e-09, 2.99898e-16, 0, -1.04252e-07, -2.385, 6.86086e-09, 2.385, -1.04252e-07, 0, 0, -0.55)
visible = false

[node name="CylinderSBO6" parent="graphics/root/body/spine1/spine2/spine3/spine4/spine5/spine6" instance=ExtResource("2_mto0i")]
transform = Transform3D(2.59, -7.45058e-09, 0, 9.31323e-10, -8.9407e-08, -2.59, 7.45058e-09, 2.59, -8.9407e-08, 0, 0, -0.185)
visible = false

[node name="MeshInstance3D" type="MeshInstance3D" parent="graphics/root/body/spine1/spine2/spine3/spine4/spine5/spine6"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0225947, -0.383047)
mesh = SubResource("BoxMesh_85tav")

[node name="spine7" type="Node3D" parent="graphics/root/body/spine1/spine2/spine3/spine4/spine5/spine6"]
transform = Transform3D(0.993959, -0.00620214, 0.109576, 0, 0.998402, 0.0565111, -0.109751, -0.0561697, 0.992372, 0, 0, -0.762246)

[node name="CylinderSBO" parent="graphics/root/body/spine1/spine2/spine3/spine4/spine5/spine6/spine7" instance=ExtResource("2_mto0i")]
transform = Transform3D(1.975, 0, 0, 0, -8.633e-08, -1.975, 0, 1.975, -8.633e-08, 0, 0, -0.265)
visible = false

[node name="CylinderSBO2" parent="graphics/root/body/spine1/spine2/spine3/spine4/spine5/spine6/spine7" instance=ExtResource("2_mto0i")]
transform = Transform3D(1.875, 0, 0, 0, -8.19589e-08, -1.875, 0, 1.875, -8.19589e-08, 0, 0, -0.585)
visible = false

[node name="MeshInstance3D" type="MeshInstance3D" parent="graphics/root/body/spine1/spine2/spine3/spine4/spine5/spine6/spine7"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0225947, -0.383047)
mesh = SubResource("BoxMesh_edeyf")

[node name="legL" type="Node3D" parent="graphics/root/body/spine1"]
transform = Transform3D(0.999763, -0.0208739, 0.00650215, 0.00812763, 0.630932, 0.775795, -0.0202963, -0.775556, 0.630951, 0.323023, 0.13203, -0.57613)

[node name="MeshInstance3D" type="MeshInstance3D" parent="graphics/root/body/spine1/legL"]
transform = Transform3D(1, 8.88178e-16, -8.88178e-16, -8.88178e-16, 1, 2.98023e-08, 8.88178e-16, -2.98023e-08, 1, 0.118097, -0.314823, 5.96046e-08)
mesh = SubResource("BoxMesh_xgwaa")

[node name="legL2" type="Node3D" parent="graphics/root/body/spine1/legL"]
transform = Transform3D(1, 0, 0, 0, 0.845645, -0.533745, 0, 0.533745, 0.845645, 0, -0.908136, 0.220842)

[node name="MeshInstance3D" type="MeshInstance3D" parent="graphics/root/body/spine1/legL/legL2"]
transform = Transform3D(1, -2.91038e-11, 2.91038e-11, -2.91038e-11, -4.37114e-08, 1, -2.91038e-11, -1, -4.37114e-08, 0.118, 0.12, -0.512)
mesh = SubResource("BoxMesh_sq1hq")

[node name="legL3" type="Node3D" parent="graphics/root/body/spine1/legL/legL2"]
transform = Transform3D(1, 0, 0, 0, 0.704857, 0.709351, 0, -0.709351, 0.704857, -5.96046e-08, 0.113017, -0.947943)

[node name="MeshInstance3D" type="MeshInstance3D" parent="graphics/root/body/spine1/legL/legL2/legL3"]
transform = Transform3D(1, -5.82077e-11, 2.65983e-18, -5.82077e-11, -1, -8.74227e-08, 0, 8.74227e-08, -1, 0.118097, -0.440439, 0.0059576)
mesh = SubResource("BoxMesh_3o6jb")

[node name="legR" type="Node3D" parent="graphics/root/body/spine1"]
transform = Transform3D(0.999936, -0.0072478, 0.00862901, 0.0107861, 0.837309, -0.546623, -0.00326333, 0.546681, 0.837335, -0.323, -0.0570298, -0.576)

[node name="MeshInstance3D" type="MeshInstance3D" parent="graphics/root/body/spine1/legR"]
transform = Transform3D(1, 8.88178e-16, -8.88178e-16, -8.88178e-16, 1, 2.98023e-08, 8.88178e-16, -2.98023e-08, 1, -0.118, -0.315, 0)
mesh = SubResource("BoxMesh_xgwaa")

[node name="legR2" type="Node3D" parent="graphics/root/body/spine1/legR"]
transform = Transform3D(1, 0, 0, 0, 0.999297, -0.0374919, 0, 0.0374919, 0.999297, 0, -0.908136, 0.220842)

[node name="MeshInstance3D" type="MeshInstance3D" parent="graphics/root/body/spine1/legR/legR2"]
transform = Transform3D(1, -2.91038e-11, 2.91038e-11, -2.91038e-11, -4.37114e-08, 1, -2.91038e-11, -1, -4.37114e-08, -0.118, 0.12, -0.512)
mesh = SubResource("BoxMesh_sq1hq")

[node name="legR3" type="Node3D" parent="graphics/root/body/spine1/legR/legR2"]
transform = Transform3D(1, 0, 0, 0, 0.992769, -0.120033, 0, 0.120033, 0.992769, -5.96046e-08, 0.113017, -0.947943)

[node name="MeshInstance3D" type="MeshInstance3D" parent="graphics/root/body/spine1/legR/legR2/legR3"]
transform = Transform3D(1, -5.82077e-11, 2.65983e-18, -5.82077e-11, -1, -8.74227e-08, 0, 8.74227e-08, -1, -0.118, -0.44, 0.006)
mesh = SubResource("BoxMesh_3o6jb")

[node name="armL" type="Node3D" parent="graphics/root/body"]
transform = Transform3D(1, 0, 0, 0, 0.433525, -0.90114, 0, 0.90114, 0.433525, 0.332597, 0.180331, 0.22877)

[node name="MeshInstance3D" type="MeshInstance3D" parent="graphics/root/body/armL"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0960872, -0.353053, 0)
mesh = SubResource("BoxMesh_6jeno")

[node name="armL2" type="Node3D" parent="graphics/root/body/armL"]
transform = Transform3D(1, 0, 0, 0, 0.990413, 0.138134, 0, -0.138134, 0.990413, 0, -0.834432, 0.0933841)

[node name="MeshInstance3D" type="MeshInstance3D" parent="graphics/root/body/armL/armL2"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0.0960872, -0.0367173, 0.198788)
mesh = SubResource("BoxMesh_7mygg")

[node name="armL3" type="Node3D" parent="graphics/root/body/armL/armL2"]
transform = Transform3D(1, 0, 0, 0, 0.923518, 0.383554, 0, -0.383554, 0.923518, 0, -0.0469013, 0.575542)

[node name="MeshInstance3D" type="MeshInstance3D" parent="graphics/root/body/armL/armL2/armL3"]
transform = Transform3D(1, 0, 0, 0, 1, 7.45058e-09, 0, -7.45058e-09, 1, 0.0960872, -0.169614, 0.0175727)
mesh = SubResource("BoxMesh_ebl5n")

[node name="armR" type="Node3D" parent="graphics/root/body"]
transform = Transform3D(1, 0, 0, 0, 0.941444, 0.337166, 0, -0.337166, 0.941444, -0.333, 0.18, 0.229)

[node name="MeshInstance3D" type="MeshInstance3D" parent="graphics/root/body/armR"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.096, -0.353, 0)
mesh = SubResource("BoxMesh_6jeno")

[node name="armR2" type="Node3D" parent="graphics/root/body/armR"]
transform = Transform3D(1, 0, 0, 0, 0.936954, -0.349455, 0, 0.349455, 0.936954, 0, -0.834432, 0.0933841)

[node name="MeshInstance3D" type="MeshInstance3D" parent="graphics/root/body/armR/armR2"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, -0.096, -0.037, 0.199)
mesh = SubResource("BoxMesh_7mygg")

[node name="armR3" type="Node3D" parent="graphics/root/body/armR/armR2"]
transform = Transform3D(1, 0, 0, 0, 0.775499, 0.631348, 0, -0.631348, 0.775499, 0, -0.0469013, 0.575542)

[node name="MeshInstance3D" type="MeshInstance3D" parent="graphics/root/body/armR/armR2/armR3"]
transform = Transform3D(1, 0, 0, 0, 1, 7.45058e-09, 0, -7.45058e-09, 1, -0.096, -0.17, 0.018)
mesh = SubResource("BoxMesh_ebl5n")
